fix cursor effect on mobile screen temp ver

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,9 @@ html, body {
     display: none;
   }
 }
+
+@media (max-width: 768px) {
+  .custom-cursor {
+    display: none !important;
+  }
+}
